# omni

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  P0-COMPLETION-REPORT.md  README.md  SECURITY.md  clippy.toml  deny.toml  progress-omni.md  rust-toolchain.toml  rustfmt.toml  todo.md
crates/omni-agent/: Cargo.toml
crates/omni-agent/src/: agent.rs  budget.rs  context.rs  lib.rs  message.rs  mode.rs  orchestrator.rs  policy.rs  privacy.rs  sandbox.rs  security.rs  sysadmin.rs  task.rs
crates/omni-agent/src/guidance/: audit.rs  autonomy.rs  escalation.rs  explanation.rs  impact.rs  mod.rs  triggers.rs  undo.rs
crates/omni-capability/: Cargo.toml
crates/omni-capability/src/: attenuation.rs  lib.rs  revocation.rs  scope.rs  tee.rs  token.rs
crates/omni-capability/tests/: integration_full_flow.rs  wire_format_v0_2.rs
crates/omni-cmd-curl/: Cargo.toml
crates/omni-cmd-curl/src/: lib.rs
crates/omni-cmd-ifconfig/: Cargo.toml
crates/omni-cmd-ifconfig/src/: lib.rs
crates/omni-cmd-nc/: Cargo.toml
crates/omni-cmd-nc/src/: lib.rs
crates/omni-cmd-netstat/: Cargo.toml
crates/omni-cmd-netstat/src/: lib.rs
crates/omni-cmd-nslookup/: Cargo.toml
crates/omni-cmd-nslookup/src/: lib.rs
crates/omni-cmd-ping/: Cargo.toml
crates/omni-cmd-ping/src/: lib.rs
crates/omni-cmd-route/: Cargo.toml
crates/omni-cmd-route/src/: lib.rs
crates/omni-cmd-scp/: Cargo.toml
crates/omni-cmd-scp/src/: lib.rs
crates/omni-cmd-ssh/: Cargo.toml
crates/omni-cmd-ssh/src/: lib.rs
crates/omni-cmd-traceroute/: Cargo.toml
crates/omni-cmd-traceroute/src/: lib.rs
crates/omni-cmd-wget/: Cargo.toml
crates/omni-cmd-wget/src/: lib.rs
crates/omni-container/: Cargo.toml
crates/omni-container/src/: attestation.rs  console.rs  engine.rs  hypervisor.rs  image.rs  lib.rs  lifecycle.rs  profile.rs
crates/omni-container/src/cli/: mod.rs  ps.rs  run.rs  run_windows.rs
crates/omni-container/src/virtio/: fs.rs  gpu.rs  mod.rs  net.rs  rng.rs  vsock.rs
crates/omni-container/tests/: kvm_engine_lifecycle.rs  lifecycle_state_machine.rs
crates/omni-crypto/: Cargo.toml
crates/omni-crypto/fuzz/: .gitignore  Cargo.toml
crates/omni-crypto/fuzz/fuzz_targets/: aead_open.rs  kex_dh.rs  signing_verify.rs
crates/omni-crypto/src/: aead.rs  fpe.rs  hash.rs  kdf.rs  kex.rs  lib.rs  signing.rs  snark.rs
crates/omni-driver-e1000e/: Cargo.toml  manifest.toml
crates/omni-driver-e1000e-image/: Cargo.toml
crates/omni-driver-e1000e-image/.cargo/: config.toml
crates/omni-driver-e1000e-image/src/: main.rs
crates/omni-driver-e1000e/src/: bringup.rs  controller_regs.rs  driver.rs  interrupts.rs  lib.rs  pci_ids.rs  ring.rs  ring_config.rs
crates/omni-driver-net-virtio/: Cargo.toml  manifest.toml
crates/omni-driver-net-virtio-image/: Cargo.toml
crates/omni-driver-net-virtio-image/.cargo/: config.toml
crates/omni-driver-net-virtio-image/src/: main.rs
crates/omni-driver-net-virtio/src/: bringup.rs  device_status.rs  driver.rs  features.rs  lib.rs  pci_ids.rs  ring.rs  tx_rx.rs  virtqueue.rs
crates/omni-driver-nvme/: Cargo.toml  manifest.toml
crates/omni-driver-nvme/src/: admin.rs  admin_session.rs  blk_channel.rs  blk_gateway.rs  bringup.rs  bringup_live.rs  controller_regs.rs  discard.rs  identify.rs  interrupt.rs  io.rs  io_error.rs  io_session.rs  lib.rs  namespace_map.rs  pci_ids.rs  queue.rs  queue_config.rs  ring.rs  transfer_model.rs
crates/omni-driver-shared/: Cargo.toml  README.md
crates/omni-driver-shared/src/: blk.rs  lib.rs
crates/omni-driver-shared/tests/: e2e_deposit_round_trip.rs
crates/omni-fs/: Cargo.toml
crates/omni-fs/src/: allocator.rs  integrity.rs  lib.rs  ondisk.rs
crates/omni-hal/: Cargo.toml
crates/omni-hal/benches/: quant_bench.rs
crates/omni-hal/src/: lib.rs  tensor.rs  transformer.rs
crates/omni-hal/tests/: transformer_integration.rs
crates/omni-kernel/: Cargo.toml  build.rs
crates/omni-kernel/src/: cap_deposit.rs  capabilities.rs  capability_forward.rs  console_input.rs  driver_cap_issuer.rs  driver_manifest.rs  entropy.rs  fd.rs  init_process.rs  initramfs.rs  ipc.rs  irq_table.rs  kaslr.rs  known_issuers.rs  lib.rs  memory.rs  mm.rs  pipe.rs  process.rs  process_table.rs  scheduling.rs  syscall.rs  syscall_handlers.rs  user_stack_args.rs  vfs.rs
crates/omni-kernel/src/bare_metal/: address_space.rs  ap_dispatch.rs  context_switch.rs  cpuinfo.rs  cursor.rs  demo.rs  driver_loader.rs  early_console.rs  elf_loader.rs  font.rs  gdt.rs  graphics.rs  heap.rs  idt.rs  input.rs  ipi.rs  lapic.rs  mb8_smoke.rs  mod.rs  mp.rs  mp_ap_entry.rs  mp_emplacement.rs  mp_trampoline.rs  paging.rs  panic.rs  pci_scan.rs  per_cpu.rs  per_cpu_run_queue.rs  pit_delay.rs  syscall_entry.rs  tlb_shootdown.rs  tss.rs  user_stack.rs  usermode.rs  userprobe.rs  userprobe_mb12.rs  vga.rs  virtio_tablet.rs  widget.rs  wm.rs
crates/omni-kernel/src/bare_metal/arch/: mod.rs  non_x86_64.rs  x86_64.rs
crates/omni-kernel/src/bare_metal/iommu/: amdvi.rs  dmar.rs  domain.rs  ivrs.rs  kernel_frame_source.rs  (+3 more)
crates/omni-kernel/src/services/: blk.rs  mod.rs  net.rs
crates/omni-kernel/tests/: boot_info.rs  heap.rs  mb11_userspace.rs  mb12_ipc_cross_process.rs  mb13_capability_signed.rs  mb13_ed25519_no_bare_metal.rs  mb14_smp.rs  panic_record.rs
crates/omni-mesh/: Cargo.toml
crates/omni-mesh-bridge/: Cargo.toml
crates/omni-mesh-bridge/src/: config.rs  lib.rs  main.rs  mesh_client.rs  ui.rs  update.rs
crates/omni-mesh-bridge/src/backend/: cvm.rs  mod.rs  secure_enclave.rs  software_mpc.rs  tpm2.rs
crates/omni-mesh-bridge/src/hardening/: mod.rs
crates/omni-mesh-bridge/src/platform/: macos.rs
crates/omni-mesh/src/: lib.rs
crates/omni-net/: Cargo.toml
crates/omni-net/src/: arp.rs  dhcp.rs  dns.rs  icmp.rs  ifconfig.rs  ip.rs  lib.rs  service.rs  socket_api.rs  tcp.rs  udp.rs
disk-image/: Cargo.toml
disk-image/src/: main.rs
kernel-runner/: Cargo.toml  README.md  build.rs
kernel-runner/.cargo/: config.toml
kernel-runner/src/: early_console.rs  main.rs
(+277 files in other folders)
