# =============================================================================
# OMNI OS — Workspace Cargo.toml
# =============================================================================
# Root manifest for the OMNI OS Rust workspace.
#
# This workspace organizes OMNI OS into a set of cooperating crates following
# the architecture described in /docs/02-architecture.md.
#
# Layering (bottom to top):
#   - Foundational (no_std-capable):  omni-types, omni-crypto, omni-capability,
#                                     omni-tee
#   - Kernel:                         omni-kernel
#   - Hardware Abstraction:           omni-hal
#   - System services:                omni-runtime, omni-mesh, omni-tokenization
#   - User-facing:                    omni-sdk, omni-agent, omni-shell
#
# All crates inherit shared metadata via [workspace.package] and shared
# dependency versions via [workspace.dependencies] to keep the workspace
# coherent across the 25-year horizon described in /docs/01-vision.md.
# =============================================================================

[workspace]
resolver = "3"
members = [
    "crates/omni-types",
    "crates/omni-crypto",
    "crates/omni-capability",
    "crates/omni-tee",
    "crates/omni-kernel",
    "crates/omni-hal",
    "crates/omni-runtime",
    "crates/omni-mesh",
    "crates/omni-tokenization",
    "crates/omni-sdk",
    "crates/omni-agent",
    "crates/omni-shell",
    # `omni-container` is the userspace container engine specified in
    # OIP-Container-006. Unlike the foundational `no_std + alloc` crates,
    # it is std-enabled (it runs as a host userspace service with KVM
    # ioctls, OCI image cache, subprocess management for virtio backends).
    "crates/omni-container",
    # `omni-fs` is the filesystem service skeleton (TASK-011, OIP-FS-018).
    # Phase-1: BLK channel registration + stub `NotImplemented` responses.
    # Phase-2: native OmniFS host.
    "crates/omni-fs",
    # `omni-driver-shared` is the common SDK helper crate for all first-party
    # user-space drivers (P6.7.8.10, OIP-013 § S5.3 step 8).  It is dep-free
    # (`no_std`, zero production dependencies) and provides the capability
    # deposit window parser plus the well-known constants every driver needs.
    # Must be a workspace member so `cargo build --workspace`, `cargo clippy`,
    # `cargo test`, and `cargo doc` all cover it in the default matrix.
    "crates/omni-driver-shared",
    # First-party user-space drivers (OIP-Driver-Framework-013 § R3, phased
    # delivery in OIP-Driver-Net-015 / OIP-Driver-NVMe-014 / OIP-Driver-TEE-016).
    # Each driver crate is `no_std + alloc` so its logic compiles cleanly in
    # the workspace matrix (clippy / test / cargo doc); the bootable image
    # sibling that turns each lib into a no_main ELF (loaded by the kernel
    # via `DriverLoad`, OIP-013 § S5) lives in a separate excluded crate
    # added when each driver enters bring-up (`*-image`, sibling to the lib
    # the same way `kernel-runner` is the bootable sibling of `omni-kernel`).
    "crates/omni-driver-net-virtio",
    "crates/omni-driver-nvme",
    "crates/omni-driver-e1000e",
    # `omni-usys` is the thin userspace syscall wrapper library (mini-libc)
    # for OMNI OS userspace programs (T4.1, Phase 1).
    "crates/omni-usys",
    # `omni-net` is the userspace TCP/IP network stack service (N2.1–N2.6,
    # N3.2, N5.1).  `no_std + alloc`; implements ARP, IPv4 routing, ICMP,
    # UDP, TCP (RFC 793 + Reno), DNS stub resolver, and the Socket API
    # dispatcher that bridges userspace SocketRequest IPC to the stack.
    "crates/omni-net",
    # `omni-cmd-ping` is the `ping` network diagnostic command (N7.1).
    # `no_std + alloc`; provides ICMP echo request/reply packet construction,
    # response parsing, RTT calculation, and statistics aggregation.
    # The bare-metal binary entry point lives in a sibling `-image` crate
    # (excluded from the default workspace matrix; added at bring-up time).
    "crates/omni-cmd-ping",
    # `omni-cmd-traceroute` is the `traceroute` command (N7.2).
    # `no_std + alloc`; ICMP TTL-based route discovery: probe construction,
    # response parsing, hop formatting, and argument parsing.
    "crates/omni-cmd-traceroute",
    # `omni-cmd-ifconfig` is the `ifconfig` command (N7.3).
    # `no_std + alloc`; network interface configuration: list, show, set
    # address, bring up/down.
    "crates/omni-cmd-ifconfig",
    # `omni-cmd-route` is the `route` command (N7.4).
    # `no_std + alloc`; routing table management: show, add, delete, default.
    "crates/omni-cmd-route",
    # `omni-cmd-netstat` is the `netstat` command (N7.5).
    # `no_std + alloc`; network connection listing: tabular format and filters.
    "crates/omni-cmd-netstat",
    # `omni-cmd-nslookup` is the `nslookup` command (N7.6).
    # `no_std + alloc`; DNS lookup: A/AAAA/MX/PTR/TXT query types,
    # result formatting, and argument parsing.
    "crates/omni-cmd-nslookup",
    # `omni-cmd-curl` is the minimal HTTP/1.1 client command (N7.7).
    # `no_std + alloc`; request construction, response parsing, URL
    # decomposition, and argument parsing.
    "crates/omni-cmd-curl",
    # `omni-cmd-wget` is the file downloader command (N7.8).
    # `no_std + alloc`; filename extraction, range headers, progress
    # formatting, and argument parsing.
    "crates/omni-cmd-wget",
    # `omni-cmd-ssh` is the SSH client scaffold (N7.9).
    # `no_std + alloc`; SSH-2 binary packet framing (RFC 4253 §6) and
    # type definitions.  Full protocol is deferred to a future sprint.
    "crates/omni-cmd-ssh",
    # `omni-cmd-scp` is the SCP file transfer scaffold (N7.10).
    # `no_std + alloc`; ScpPath type and argument parsing.  Transfer
    # logic depends on the SSH scaffold.
    "crates/omni-cmd-scp",
    # `omni-cmd-nc` is the `nc` (netcat) command (N7.11).
    # `no_std + alloc`; connect/listen mode types and argument parsing.
    "crates/omni-cmd-nc",
    # `omni-spark` (OMNI Spark) is the cross-platform desktop application for
    # mesh participation on conventional OSes (Linux, Windows, macOS).
    # `std`-enabled. Specified by OIP-025; depends on OIP-024 tiered trust model.
    "crates/omni-spark",
]

# Fuzz harnesses live in their own ephemeral packages outside the
# workspace because `cargo-fuzz` requires standalone crates with
# `bin` targets. Excluding them prevents accidental rebuilds during
# normal `cargo build`/`cargo test` and keeps the workspace closure
# minimal.
exclude = [
    "crates/omni-crypto/fuzz",
    # `kernel-runner` is the bootable artifact (OIP-Kernel-005 § S1):
    # a bare-metal bin that compiles only for `x86_64-unknown-none`.
    # Excluding it from the default workspace matrix keeps `cargo
    # build --workspace` green on developer machines without a
    # cross-toolchain. CI builds it explicitly via
    # `cargo build --manifest-path kernel-runner/Cargo.toml \
    #              --target x86_64-unknown-none --release`
    # See `kernel-runner/README.md` for the full build + QEMU run flow.
    "kernel-runner",
    # `omni-driver-net-virtio-image` is the bootable sibling of
    # `omni-driver-net-virtio` (OIP-Driver-Net-015 + OIP-Driver-Framework-013
    # § S5.3 step 9 — `DriverLoad` ingests this ELF and `spawn_from_elf`
    # turns it into a Ring 3 driver process). `no_std + no_main` for
    # `x86_64-unknown-none`; excluded so `cargo build --workspace` stays
    # green on developer machines without the cross-toolchain. Built via
    # `cargo build --manifest-path crates/omni-driver-net-virtio-image/Cargo.toml \
    #              --target x86_64-unknown-none --release` (P6.7.8.3).
    "crates/omni-driver-net-virtio-image",
    # `omni-driver-nvme-image` is the bootable sibling of `omni-driver-nvme`
    # (OIP-Driver-NVMe-014 § S6 + OIP-Driver-Framework-013 § S5.3 step 9 —
    # `DriverLoad` ingests this ELF and `spawn_from_elf` turns it into a
    # Ring 3 driver process). `no_std + no_main` for `x86_64-unknown-none`;
    # excluded so `cargo build --workspace` stays green on developer
    # machines without the cross-toolchain. Built via
    # `cargo build --manifest-path crates/omni-driver-nvme-image/Cargo.toml \
    #              --target x86_64-unknown-none --release` (P6.7.8.5).
    "crates/omni-driver-nvme-image",
    # `omni-driver-e1000e-image` is the bootable sibling of
    # `omni-driver-e1000e` (OIP-Driver-Net-015 § S5 + § S8 +
    # OIP-Driver-Framework-013 § S5.3 step 9 — `DriverLoad` ingests this
    # ELF and `spawn_from_elf` turns it into a Ring 3 driver process).
    # `no_std + no_main` for `x86_64-unknown-none`; excluded so
    # `cargo build --workspace` stays green on developer machines without
    # the cross-toolchain. Built via
    # `cargo build --manifest-path crates/omni-driver-e1000e-image/Cargo.toml \
    #              --target x86_64-unknown-none --release` (P6.7.8.7).
    "crates/omni-driver-e1000e-image",
    # `omni-shell-image` is the bare-metal PID 1 shell binary (`no_std +
    # no_main`, target `x86_64-unknown-none`). Excluded from the default
    # workspace matrix so `cargo build --workspace` stays green on developer
    # machines without the cross-toolchain. Build explicitly via:
    #
    #   cargo build --manifest-path crates/omni-shell-image/Cargo.toml \
    #               --target x86_64-unknown-none --release
    "crates/omni-shell-image",
    # `disk-image` is the host-side UEFI/BIOS disk image builder.
    # It depends on the heavy `bootloader 0.11` crate (which embeds
    # pre-compiled bootloader binary blobs) and only needs to run on CI
    # or developer machines that have OVMF installed. Excluded from the
    # default workspace to keep `cargo build --workspace` lightweight.
    "disk-image",
]

# -----------------------------------------------------------------------------
# Shared package metadata
# -----------------------------------------------------------------------------
# All crates inherit these fields. They can be referenced via
# `field.workspace = true` inside each crate's Cargo.toml.
[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
# Authors: project pseudonym `cySalazar` is used until Stichting OMNI is
# constituted (tracked under `todo.md` P4.1). Once the Foundation exists,
# this field transitions to `Stichting OMNI <hello@omni-os.org>`. Rationale
# for the pseudonym lives in the project identity policy (see governance
# doc and project memory).
authors = ["cySalazar <cySalazar@cySalazar.com>"]
license = "Apache-2.0"
repository = "https://github.com/CySalazar/omni"
homepage = "https://omni-os.org"
documentation = "https://docs.omni-os.org"
readme = "README.md"
keywords = ["operating-system", "ai", "privacy", "decentralized", "mesh"]
categories = ["os", "embedded", "cryptography"]

# -----------------------------------------------------------------------------
# Shared dependencies (versions pinned at workspace level)
# -----------------------------------------------------------------------------
# Sub-crates depend on these via `dep.workspace = true` to ensure consistent
# versions across the workspace. Rationale per crate is documented in
# /docs/09-tech-specifications.md.
[workspace.dependencies]
# --- Internal crates (path-based, version-tracked) ---
omni-types          = { path = "crates/omni-types",          version = "0.2.0" }
omni-crypto         = { path = "crates/omni-crypto",         version = "0.2.0" }
omni-capability     = { path = "crates/omni-capability",     version = "0.2.0" }
omni-tee            = { path = "crates/omni-tee",            version = "0.2.0" }
omni-hal            = { path = "crates/omni-hal",            version = "0.2.0" }
omni-runtime        = { path = "crates/omni-runtime",        version = "0.2.0" }
omni-mesh           = { path = "crates/omni-mesh",           version = "0.2.0" }
omni-tokenization   = { path = "crates/omni-tokenization",   version = "0.2.0" }
omni-sdk            = { path = "crates/omni-sdk",            version = "0.2.0" }
omni-agent          = { path = "crates/omni-agent",          version = "0.2.0" }
# Filesystem service (TASK-011, OIP-FS-018): Phase-1 skeleton.
omni-fs             = { path = "crates/omni-fs",             version = "0.2.0" }
# Driver SDK helper (P6.7.8.10, OIP-013 § S5.3 step 8): dep-free, no_std.
omni-driver-shared  = { path = "crates/omni-driver-shared",  version = "0.2.0" }
# Network stack service (N2.1–N2.6, N3.2, N5.1): no_std + alloc.
omni-net            = { path = "crates/omni-net",            version = "0.2.0" }
# `ping` network diagnostic command (N7.1): no_std + alloc.
omni-cmd-ping       = { path = "crates/omni-cmd-ping",       version = "0.2.0" }
# `traceroute` command (N7.2): no_std + alloc.
omni-cmd-traceroute = { path = "crates/omni-cmd-traceroute", version = "0.2.0" }
# `ifconfig` command (N7.3): no_std + alloc.
omni-cmd-ifconfig   = { path = "crates/omni-cmd-ifconfig",   version = "0.2.0" }
# `route` command (N7.4): no_std + alloc.
omni-cmd-route      = { path = "crates/omni-cmd-route",      version = "0.2.0" }
# `netstat` command (N7.5): no_std + alloc.
omni-cmd-netstat    = { path = "crates/omni-cmd-netstat",    version = "0.2.0" }
# `nslookup` command (N7.6): no_std + alloc.
omni-cmd-nslookup   = { path = "crates/omni-cmd-nslookup",   version = "0.2.0" }
# `curl` HTTP client command (N7.7): no_std + alloc.
omni-cmd-curl       = { path = "crates/omni-cmd-curl",       version = "0.2.0" }
# `wget` file downloader command (N7.8): no_std + alloc.
omni-cmd-wget       = { path = "crates/omni-cmd-wget",       version = "0.2.0" }
# `ssh` client scaffold (N7.9): no_std + alloc.
omni-cmd-ssh        = { path = "crates/omni-cmd-ssh",        version = "0.2.0" }
# `scp` file transfer scaffold (N7.10): no_std + alloc.
omni-cmd-scp        = { path = "crates/omni-cmd-scp",        version = "0.2.0" }
# `nc` (netcat) command (N7.11): no_std + alloc.
omni-cmd-nc         = { path = "crates/omni-cmd-nc",         version = "0.2.0" }
# OMNI Spark (OIP-025): cross-platform mesh participation desktop app.
omni-spark          = { path = "crates/omni-spark",          version = "0.2.0" }

# --- Async runtime ---
tokio        = { version = "1.52", features = ["full"] }
async-trait  = "0.1"
futures      = "0.3"

# --- Serialization ---
# `serde` is configured with `default-features = false` + `derive` + `alloc`
# so that consumers can opt into `no_std + alloc` without dragging `std` in.
serde       = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json  = "1.0"
# `postcard` 1.x is the canonical wire encoding used for capability-token
# signing pre-images and TEE attestation envelopes. It replaces `bincode`
# v2 (unmaintained per RUSTSEC-2025-0141) under `OIP-Serde-004`.
#
# `default-features = false` + `alloc` only — `use-std` is intentionally
# NOT enabled at the workspace level: Cargo features are additive, so
# enabling it once would pull `std` into every foundational crate
# (`omni-types`, `omni-crypto`, `omni-capability`, `omni-tee`,
# `omni-kernel`). A consumer that genuinely requires `std::io::Read`/
# `Write` adapters MUST depend on `postcard` directly (not via the
# workspace re-export) and enable `use-std` in that crate's Cargo.toml
# only. There are no such consumers at v0.2; the rule is stated to head
# off future drift.
#
# All call sites MUST go through `omni-types::wire::{encode_canonical,
# decode_canonical}` — never invoke `postcard::*` directly outside of
# `omni-types::wire`. Enforced by clippy `disallowed-methods` in
# `clippy.toml` (introduced in M2 of `OIP-Serde-004`).
postcard    = { version = "1.0", default-features = false, features = ["alloc"] }

# --- Cryptography (subset — see /docs/09-tech-specifications.md) ---
# All crypto crates are pinned and selected from the RustCrypto family for
# audit coherence + `no_std`-friendliness (consistent with the kernel
# trajectory in P6). `ring` is intentionally NOT used: it is not
# `no_std`-friendly and would force a divergent crypto trust base.
ed25519-dalek      = { version = "2.1", default-features = false, features = ["zeroize", "rand_core", "serde"] }
x25519-dalek       = { version = "2.0", default-features = false, features = ["zeroize", "static_secrets", "reusable_secrets", "serde"] }
chacha20poly1305   = { version = "0.10", default-features = false, features = ["alloc"] }
sha2               = { version = "0.11", default-features = false }
sha3               = { version = "0.12", default-features = false }
blake3             = { version = "1.5", default-features = false }
hkdf               = { version = "0.13", default-features = false }
argon2             = { version = "0.5", default-features = false, features = ["alloc"] }

# --- Random number generation ---
# CSPRNG abstraction used by signing/kex/AEAD nonce generation.
# `getrandom` v0.2 is the platform CSPRNG bridge; `rand_core` is the trait
# surface implemented by all RustCrypto crates that need entropy.
rand_core          = { version = "0.6", default-features = false, features = ["getrandom"] }
getrandom          = { version = "0.2", default-features = false }

# --- Constant-time + zeroization helpers ---
# `subtle` provides `ConstantTimeEq` for AEAD tag check / signature verify.
# `zeroize` ensures key material is wiped on `Drop`.
subtle             = { version = "2.6", default-features = false }
zeroize            = { version = "1.8", default-features = false, features = ["derive", "alloc"] }

# --- Identifiers + encoding ---
# `uuid` v1 with `v4` is a 122-bit random identifier used for AgentId /
# CapabilityId / SessionId. v4 is chosen over v7 (sortable timestamped)
# because v7 requires `std::time::SystemTime`, which is unavailable in
# `no_std` foundational crates. Entropy is sourced from `getrandom`
# directly at the call site, so the `rng-*` features of `uuid` are not
# enabled (we keep the dependency surface minimal). When a `Clock`
# abstraction lands in `omni-hal` (P6), we can revisit using v7 with an
# injected timestamp.
#
# `hex` provides safe encoding for raw-byte identifiers (we deliberately
# do NOT impl `Display` for raw bytes; call sites must pass through
# `to_hex` to surface an ID).
uuid               = { version = "1.11", default-features = false, features = ["v4", "serde"] }
hex                = { version = "0.4", default-features = false, features = ["alloc"] }

# --- Networking (mesh protocol) ---
quinn = "0.11"
snow  = "0.9"

# --- Synchronization primitives ---
# `parking_lot` is the workspace-standard `Mutex` / `RwLock` replacement.
# It does not have PoisonError semantics (unlike `std::sync::Mutex`), which
# simplifies audit paths. The `clippy.toml` disallowed-methods list bans
# `std::sync::Mutex::new` and redirects callers here. MIT/Apache-2.0.
parking_lot = "0.12"

# --- Observability ---
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- Error handling ---
# thiserror v2 chosen to align with the version pulled by upstream crates
# (quinn, tokio ecosystem), eliminating duplicate-dependency warnings.
# `default-features = false` enables `no_std` mode (Rust 1.81+ has
# `core::error::Error` so this is fully supported on our MSRV 1.85).
thiserror = { version = "2.0", default-features = false }
anyhow    = "1.0"

# --- Testing utilities ---
proptest = "1.5"
mockall  = "0.13"
# Compile-fail tests for type-system invariants (e.g., proving that a
# `ModelId` cannot be passed where a `NodeId` is expected). Dev-only.
trybuild = "1.0"

# -----------------------------------------------------------------------------
# Build profiles
# -----------------------------------------------------------------------------
# Profiles reflect OMNI OS priorities: Security > Stability > Performance.

# Release: maximum optimization, abort on panic, stripped symbols.
# Rationale: smaller attack surface, predictable failure mode (no unwinding
# state in security-critical code), smaller binary size.
[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
debug           = false
panic           = "abort"
strip           = "symbols"
overflow-checks = true   # Keep overflow checks even in release for security.

# Dev: fast builds, overflow checks, debug info.
[profile.dev]
opt-level       = 0
debug           = true
overflow-checks = true

# Bench: like release but with debug info for profiling.
[profile.bench]
inherits = "release"
debug    = true
strip    = "none"

# Test: optimization-friendly while keeping debug info.
[profile.test]
opt-level       = 1
debug           = true
overflow-checks = true

# -----------------------------------------------------------------------------
# Workspace-wide lints
# -----------------------------------------------------------------------------
# Strict lints enforce OMNI OS priorities in code. Sub-crates inherit these
# via `lints.workspace = true` in their Cargo.toml.

[workspace.lints.rust]
# --- Memory safety ---
# Any unsafe code requires explicit justification in PR review.
unsafe_code = "warn"

# --- Correctness ---
unreachable_pub  = "warn"
unused_must_use  = "deny"

# --- Documentation ---
# Every public item must be documented. Critical for a 25-year project.
missing_docs = "warn"

# --- Future compatibility ---
future_incompatible      = { level = "warn", priority = -1 }
rust_2024_compatibility  = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Clippy lint groups — strictness from low priority to high.
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Specific lints critical for systems and security code.
unwrap_used       = "warn"
expect_used       = "warn"
panic             = "warn"
todo              = "warn"   # Tracks explicit `todo!()` for inventory.
unimplemented     = "warn"   # Tracks explicit `unimplemented!()`.
indexing_slicing  = "warn"
integer_division  = "warn"
float_arithmetic  = "warn"

# Allow some pedantic lints that are noisy in practice without security value.
module_name_repetitions = "allow"
must_use_candidate      = "allow"

# Transitive-dependency version conflicts come from upstream crates (Windows
# target shims, etc.) and cannot be fixed at this workspace's level. We
# accept these and revisit when a single-version policy becomes feasible.
multiple_crate_versions = "allow"

# Placeholder tests in scaffold crates trigger this; not actionable at v0.1.
# Re-enable selectively per-crate when implementations land.
missing_const_for_fn = "allow"
