# =============================================================================
# kernel-runner — OMNI OS UEFI bootloader-runner harness
# =============================================================================
# Specified by OIP-Kernel-005 § S1. This crate is the **bootable
# artifact**: it consumes `omni-kernel` (built with the `bare-metal`
# feature) as a `staticlib` and produces a UEFI-bootable disk image
# via the `bootloader` crate's `DiskImageBuilder`.
#
# Excluded from the default workspace `cargo build` matrix (see the
# root Cargo.toml `[workspace.exclude]` list) so developers without a
# cross-toolchain still get `cargo build --workspace` green. To build
# the runner image:
#
#   cargo build --manifest-path kernel-runner/Cargo.toml \
#               --target x86_64-unknown-none --release
#
# Or, more conveniently, via the `Makefile.toml` `run-qemu-uefi`
# task once the developer machine has OVMF installed.
# =============================================================================

[package]
name             = "kernel-runner"
description      = "OMNI OS UEFI bootloader-runner harness (consumes omni-kernel; emits *.efi)"
version          = "0.1.0"
edition          = "2024"
rust-version     = "1.85"
authors          = ["cySalazar <cySalazar@cySalazar.com>"]
license          = "AGPL-3.0-only"
repository       = "https://github.com/CySalazar/omni"
homepage         = "https://omni-os.org"
keywords         = ["operating-system", "kernel", "uefi", "bootloader"]
categories       = ["os", "embedded"]
publish          = false

[[bin]]
name = "kernel-runner"
path = "src/main.rs"

[dependencies]
# `bootloader` 0.9 is the stable-Rust-compatible BIOS/UEFI bootloader
# crate. It provides `BootInfo`, the `entry_point!` macro, and the
# `cargo bootimage` toolchain integration used by the K5 QEMU smoke
# test. The `map_physical_memory` feature instructs the loader to
# identity-map all physical RAM and report the virtual offset in
# `BootInfo.physical_memory_offset` (used by the K6+ page-table
# walker). OIP-Kernel-005 § S3 / § S4.
bootloader  = { version = "0.9", features = ["map_physical_memory"] }
omni-kernel = { path = "../crates/omni-kernel", features = ["bare-metal"] }

# The runner is its own profile: it always builds with link-time
# optimization in release (we ship the kernel as a single ELF, then
# `bootloader` strips and embeds it). Inheriting the workspace's
# release profile would force LTO on the rest of the workspace too,
# which is unnecessary host-side.
[profile.release]
lto             = true
codegen-units   = 1
panic           = "abort"
strip           = "symbols"

[profile.dev]
panic = "abort"
