# =============================================================================
# kernel-runner — OMNI OS UEFI bootloader-runner harness
# =============================================================================
# Specified by OIP-Kernel-005 § S1. This crate is the **bootable
# artifact**: it consumes `omni-kernel` (built with the `bare-metal`
# feature) as a `staticlib` and produces a UEFI-bootable disk image
# via the `bootloader` crate's `DiskImageBuilder`.
#
# Excluded from the default workspace `cargo build` matrix (see the
# root Cargo.toml `[workspace.exclude]` list) so developers without a
# cross-toolchain still get `cargo build --workspace` green. To build
# the runner image:
#
#   cargo build --manifest-path kernel-runner/Cargo.toml \
#               --target x86_64-unknown-none --release
#
# Or, more conveniently, via the `Makefile.toml` `run-qemu-uefi`
# task once the developer machine has OVMF installed.
# =============================================================================

[package]
name             = "kernel-runner"
description      = "OMNI OS UEFI bootloader-runner harness (consumes omni-kernel; emits *.efi)"
version          = "0.1.0"
edition          = "2024"
rust-version     = "1.85"
authors          = ["cySalazar <cySalazar@cySalazar.com>"]
license          = "Apache-2.0"
repository       = "https://github.com/CySalazar/omni"
homepage         = "https://omni-os.org"
keywords         = ["operating-system", "kernel", "uefi", "bootloader"]
categories       = ["os", "embedded"]
publish          = false

[[bin]]
name = "kernel-runner"
path = "src/main.rs"

[dependencies]
# `bootloader_api` 0.11 is the kernel-side companion to the `bootloader`
# crate. It provides `BootInfo`, the `entry_point!` macro, `BootloaderConfig`,
# and `FrameBuffer` / `FrameBufferInfo` for GOP framebuffer access. The
# host-side disk-image builder lives in the separate `../disk-image` crate.
# OIP-Kernel-005 § S3 / § S4 (updated for bootloader 0.11).
bootloader_api = { version = "0.11", default-features = false }
omni-kernel    = { path = "../crates/omni-kernel", features = ["bare-metal"] }

[features]
default     = []
# Forward the kernel's `mb8-smoke` feature through the runner so the QEMU
# image built from this crate exercises the MB8 two-task preemption demo.
# Track B MB8 (2026-05-17).
mb8-smoke   = ["omni-kernel/mb8-smoke"]
# Forward the kernel's `mb11-userprobe` feature so the QEMU image runs the
# embedded Ring 3 user-probe (`WriteConsole("hello\n") + TaskExit(0)`).
# Track B MB11 (2026-05-18).
mb11-userprobe = ["omni-kernel/mb11-userprobe"]
# Forward the kernel's `mb12-userprobe` feature so the QEMU image runs
# the cross-process IPC smoke: a sender + receiver pair exchanging a
# "ping" message through a kernel-pre-created channel. Mutually
# exclusive with `mb11-userprobe` at the boot wiring level — when both
# features are enabled in the same build, the MB11 block runs first.
# Track B MB12 (2026-05-18).
mb12-userprobe = ["omni-kernel/mb12-userprobe"]

# The runner is its own profile: it always builds with link-time
# optimization in release (we ship the kernel as a single ELF, then
# `bootloader` strips and embeds it). Inheriting the workspace's
# release profile would force LTO on the rest of the workspace too,
# which is unnecessary host-side.
[profile.release]
lto             = true
codegen-units   = 1
panic           = "abort"
strip           = "debuginfo"

[profile.dev]
panic = "abort"
